--- a/Infinite Scroll App/index.css
+++ b/Infinite Scroll App/index.css
@@ -10,3 +10,15 @@
 @keyframes bounce {
     to { transform: translateY(-10px); }
 }
+
+.post {
+    background: white;
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:  center;
+}
